[project]
name = "pyrvfl"
version = "0.0.1"
authors = [
  { name="Nicolás Araya", email="nicolas.arayac@mail.udp.cl" },
  { name="Pablo Henríquez", email="pablo.henriquez@udp.cl" }
]
description = "a RVFL implementation in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nickarcaro/pyrvfl"
Issues = "https://github.com/nickarcaro/pyrvfl/issues"